<resources>
    <string name="app_name">Catálogo dos Livros</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="txt_pesquisarpor">Pesquisa por</string>
    <string name="txt_pesquisar_todos">Todos</string>
    <string name="txt_id">Id</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_autor">Autor</string>
    <string name="txt_ano">Ano</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="title_activity_tela_cadastrar">Catálogo Livros</string>
    <string name="title_activity_tela_pesquisar">Catálogo Livros</string>

</resources>
