<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPesquisa"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/title_activity_tela_pesquisar"
            android:textSize="30dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/txt_pesquisar"
        android:textSize="32dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TableLayout
        android:id="@+id/tbPesquisa"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/trPesquisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_id"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_titulo"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_autor"
                android:textSize="18dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/txtano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ano"
                android:textSize="18dp"
                android:textStyle="bold"/>

        </TableRow>

        <Button
            android:id="@+id/btnVoltar"
            android:text="@string/btn_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableLayout>



</LinearLayout>