<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaCadastro"
    android:background="#ffffff"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="30dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cadastrar"
        android:textSize="30dp"
        android:background="#cecece"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="177dp" />

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cecece"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="196dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_autor"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="236dp" />

    <EditText
        android:id="@+id/edtAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cecece"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="255dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/txt_ano"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="296dp" />

    <EditText
        android:id="@+id/edtAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cecece"
        android:textSize="24dp"
        android:layout_marginRight="50dp"
        tools:layout_editor_absoluteY="315dp" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="417dp" />
</android.support.constraint.ConstraintLayout>